# rust-linked-lists

./: Cargo.toml  README.md
src/: firstlist.rs  lib.rs  main.rs  secondlist.rs  thirdlist.rs
