[package]
name = "LinkedLists"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false
test = false
doc = false
path = "src/lib.rs"
name = "firstlist"

[[bin]]
name = "main"
path = "src/LinkedLists.rs"

[dependencies]
